# mars-tyxn-classifier

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: MarsCracks_v7_classifier_pipeline.ipynb
src/: tyx_structural_trees.json
src/mars_tyxn/: __init__.py  calibration_analysis.py  classical_feature_builder.py  evaluate_ground_truth.py  extract_inference_patches.py  hog_transformer.py  infer_ensemble.py  infer_stacking.py  infer_unet.py  junction_geometry.py  junction_proposals.py  meta_features.py  predict_ensemble.py  predict_unet.py  run_geometric_on_martian.py  run_glyph_benchmark.py  run_improved_detection_benchmark.py  template_generator.py  template_matcher.py  tile_hirise_for_pipeline.py  train_cnn.py  train_mlp.py  train_rf.py  train_svm.py  train_xgb.py  unet.py  unet_v1.py
tests/: test_corridor_side_contacts_parity.py  test_infer_stacking.py  test_infer_unet_load_strict.py  test_slicer_cog_path.py
